doc tests essaims actifs dispersés

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -94,19 +94,19 @@ resetPassword=Réinitialistation du mot de passe
 
 # tests.html
 EvenIncomplets=Événements incomplets
-PasEvenIncomplets=Pas d\'événements incomplets
-HistRuchersEveOK=Historique ruchers pas d\'événements incorrects
+PasEvenIncomplets=Pas d\'événement incomplet
+HistRuchersEveOK=Historique ruchers pas d\'événement incorrect
 HistRuchersEveKO=Historique ruchers : événements incorrects
 HistRuchersFinOK=Historique ruchers : après traitement des événements tous les ruchers sont vides
 HistRuchersFinKO=Historique ruchers : après traitement des événements, des ruchers ne sont pas vides
-HistHaussesEveOK=Historique ajout/retrait hausses pas d\'événements incorrects
+HistHaussesEveOK=Historique ajout/retrait hausses pas d\'événement incorrect
 HistHaussesEveKO=Historique ajout/retrait hausses : événements incorrects
 HistRuchesFinOK=Historique ruches : après traitement des événements tous les ruches n\'ont plus de hausse
 HistRuchesFinKO=Historique ruches : après traitement des événements, des ruches ont encore des hausses
-EssDisperseActifKO=Essaims dispersé et actifs
-EssDisperseActifOK=Pas d'essaims dispersé et actifs
+EssDisperseActifKO=Essaims dispersés et actifs
+EssDisperseActifOK=Pas d'essaims dispersé et actif
 EssInactSansDisperKO=Essains inactifs sans événement dispersion
-EssInactSansDisperOK=Pas d'essains inactifs sans événement dispersion
+EssInactSansDisperOK=Pas d'essain inactif sans événement dispersion
 
 # infos.html
 hausses=hausses
