--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -94,19 +94,19 @@ resetPassword=Reset password
 
 # tests.html
 EvenIncomplets=Incomplete events
-PasEvenIncomplets=No incomplete events
-HistRuchersEveOK=Apiaries history no incorrect events 
+PasEvenIncomplets=No incomplete event
+HistRuchersEveOK=Apiaries history no incorrect event 
 HistRuchersEveKO=Apiarie history : incorrect events
 HistRuchersFinOK=Apiarie history: after processing the events all the apiaries are empty
 HistRuchersFinKO=Apiarie history: after processing the events, some apiaries are non empty
-HistHaussesEveOK=Historique ajout/retrait hausses no incorrect events
+HistHaussesEveOK=Historique ajout/retrait hausses no incorrect event
 HistHaussesEveKO=Historique ajout/retrait hausses : incorrect events
 HistRuchesFinOK=Hive history : after processing the events all the hives have no super
 HistRuchesFinKO=Hive history : after processing the events some hives still have supers
 EssDisperseActifKO=Dispersed and active swarms
-EssDisperseActifOK=No dispersed and active swarms
+EssDisperseActifOK=No dispersed and active swarm
 EssInactSansDisperKO=Inactive swarms without dispersion event
-EssInactSansDisperOK=No inactive swarms without dispersion event
+EssInactSansDisperOK=No inactive swarm without dispersion event
 
 
 # infos.html
