rucherDists.html th et titre, ok pour le dépôt

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -543,13 +543,18 @@ doitEtreSupA=Doit être supérieure à
 
 #################### rucher ########################################
 
+# rucher/ruchersDist.html
+DistanceV=Distance voiture
+TempsV=Temps voiture
+DistanceO=Distance vol d'oiseau
+Distances=Distances
+
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 ProductionRecolte=Production par récolte
 ruchersProdRecolte=Ruchers statistiques de production
 
 # rucher/rucherDetail.html
-distance=Distance
 temps=Temps
 Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
