--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -544,13 +544,18 @@ doitEtreSupA=Must be greater than
 
 #################### rucher ########################################
 
+# rucher/ruchersDist.html
+DistanceV=Distance car
+TempsV=Time car
+DistanceO=Distance crow
+Distances=Distances
+
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 ProductionRecolte=Production per harvest
 ruchersProdRecolte=Apiaries production statistics
 
 # rucher/rucherDetail.html
-distance=Distance
 temps=Time
 Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
