suppression message en double

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -497,13 +497,10 @@ ajouterhausse=Add this super
 retirerhausse=Remove this super
 retirerreordonnerHausses=Remove - reorder supers
 
-# ruche/rucheRetraitHausseForm.html
-retraitDeLaruche=Remove from hive {0}
-
 # ruche/rucheHausseForm.html
 hausseXX=Super {0}
 ajoutSurLaruche=Add on hive {0}
-retraitDeLaruche=This super will be removed from the hive {0}
+retraitDeLaruche=This super will be removed from the  {0} hive
 
 # ruchetype/rucheTypesListe.html
 rucheType=Hive type
