js/ruches versionné

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -115,10 +115,10 @@ elevage=élevage
 ruchersdepot=ruchers (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
-ruchesaudepot=ruches au dépôt, 
-haussesnonposees=hausses non posées
+ruchesaudepot=ruches au dépôt
+nonposees=non posées
 ruchesavecessaim=ruches avec essaim, 
-haussesposees=hausses posées 
+posees=posées 
 Distance=Distance
 valeursParAnnee=Valeurs par année
 poidsMielEnPot=Poids miel en pot
