--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -116,10 +116,10 @@ elevage=breeding
 ruchersdepot=apiaries (with depot)
 rucheset=hives and 
 haussesactives=active supers	
-ruchesaudepot=hives at the depot, 
-haussesnonposees=free supers
+ruchesaudepot=hives at the depot
+nonposees=free
 ruchesavecessaim=hives with a swarm, 
-haussesposees=supers on a hive 
+posees=on a hive 
 Distance=Distance
 valeursParAnnee=Values per year
 poidsMielEnPot=Honey weight in jar
