--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -433,6 +433,7 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolte/recolteDetail.html
+Retirerhausses=Retirer les hausses
 SaisiePoidsMiel=Saisie des poids de miel
 recolte=Récolte
 poidsMiel=Poids de miel
