--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -434,6 +434,7 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolte/recolteDetail.html
+Retirerhausses=Remove the supers
 SaisiePoidsMiel=Honey weight entry
 recolte=Harvest
 poidsMiel=Honey weight
