essaimAssociation.html checkbox sortie du code datatable

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -251,6 +251,7 @@ commentaireLot=Ajout d'un commentaire au lot
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
 association=Association
+avecEssaims=Ruches avec essaim
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Ajout de sucre 
