--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -108,7 +108,6 @@ EssDisperseActifOK=No dispersed and active swarm
 EssInactSansDisperKO=Inactive swarms without dispersion event
 EssInactSansDisperOK=No inactive swarm without dispersion event
 
-
 # infos.html
 hausses=supers
 production=production
@@ -252,6 +251,7 @@ commentaireLot=Add a comment to the batch
 echangePositionsRuches=Exchange positions of hives {0} and {1}
 AttentionDipersion=Attention save will disperse the swarm {0}
 association=Association
+avecEssaims=Ruches avec essaim
 
 # essaim/essaimSucreForm.html
 ajoutSucre=Add sugar 
