selenium 4.11, essaimAssociation pas de swap si même rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -249,6 +249,8 @@ commentaireLot=Ajout d'un commentaire au lot
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
+positionRuches=La ruche {0} est dans le rucher {1}
+
 AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
 association=Association
 avecEssaims=Ruches avec essaim
