--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -249,6 +249,8 @@ commentaireLot=Add a comment to the batch
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
+positionRuches=Hive {0} is in apiary {1}
+
 AttentionDipersion=Attention save will disperse the swarm {0}
 association=Association
 avecEssaims=Ruches avec essaim
