recolteDetail ajout chkbox données brutes

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -436,6 +436,7 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolte/recolteDetail.html
+Brut=Raw data
 Retirerhausses=Remove the supers
 SaisiePoidsMiel=Honey weight entry
 recolte=Harvest
