--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -436,6 +436,7 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolte/recolteDetail.html
+Brut=Données brutes
 Retirerhausses=Retirer les hausses
 SaisiePoidsMiel=Saisie des poids de miel
 recolte=Récolte
