recolte enlever toutes les hausses, test xmlhttpreq et format date

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -44,7 +44,8 @@ LeNomXXExiste=Le nom {0} existe déjà
 
 # recolte/RecolteHausseController.java
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
-haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
+haussesEnlevees=Hausse(s) {0} enlevée(s), ruche(s) {1}
+enleverHausses=Enlever hausse(s) {0} ruche(s) {1} ?
 
 # hausse/HausseController.java
 clonehaussecreees=Hausse(s) {0} créée(s)
@@ -445,7 +446,6 @@ enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
 recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
-enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
 supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
 statistiquesessaims=Statistiques essaims
 saisirpoids=Saisir les poids
