--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -45,6 +45,7 @@ LeNomXXExiste=The name {0} already exists
 # recolte/RecolteHausseController.java
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
+enleverHausses=Remove supers {0} from their hives {1} ?
 
 # hausse/HausseController.java
 clonehaussecreees=Super(s) {0} created
@@ -445,7 +446,6 @@ enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
 recolteHausseDepot=Remove all supers of the harvest from their hives
-enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
 supprimerrecolteethausses=Remove this harvest and all its supers?
 statistiquesessaims=Swarms statistics
 saisirpoids=Get weight
