rucherDetail ajouté saisie tabulaire d'événements de Pesée des ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -572,6 +572,7 @@ ajoutRuches=Ajouter des ruches
 poidsParRuches=Poids/Ruches
 listeXRuches=Liste des {0} ruche(s)
 nbXHausses={0} hausse(s)
+creerPesee=Créer des événements Pesée
 
 # rucher/ruchersListe.html
 carteGg=Carte Google
