--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -572,6 +572,7 @@ ajoutRuches=Add hives
 poidsParRuches=Weight/Hives
 listeXRuches={0} hive(s) list
 nbXHausses={0} super(s)
+creerPesee=Create Weight events
 
 # rucher/ruchersListe.html
 carteGg=Google Map
