rucher pesée ruches : titre, message confirmation, date par défaut

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -544,6 +544,9 @@ doitEtreSupA=Doit être supérieure à
 
 #################### rucher ########################################
 
+# rucher/rucherPoidsForm.hml
+PoidsVide=Poids vide
+
 # rucher/ruchersDist.html
 DistanceV=Distance voiture
 TempsV=Temps voiture
@@ -570,7 +573,7 @@ rucher=Rucher
 depot=Dépôt
 ajoutRuches=Ajouter des ruches
 poidsParRuches=Poids/Ruches
-listeXRuches=Liste des {0} ruche(s)
+listeXRuches={0} ruche(s)
 nbXHausses={0} hausse(s)
 creerPesee=Créer des événements Pesée
 
