--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -544,6 +544,9 @@ doitEtreSupA=Must be greater than
 
 #################### rucher ########################################
 
+# rucher/rucherPoidsForm.hml
+PoidsVide=Empty weight
+
 # rucher/ruchersDist.html
 DistanceV=Distance car
 TempsV=Time car
@@ -570,7 +573,7 @@ rucher=Apiary
 depot=Depot
 ajoutRuches=Add hives
 poidsParRuches=Weight/Hives
-listeXRuches={0} hive(s) list
+listeXRuches={0} hive(s)
 nbXHausses={0} super(s)
 creerPesee=Create Weight events
 
