rucher pesée tabulaire ajouté eves pesée précédents et liens vers ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -546,6 +546,7 @@ doitEtreSupA=Doit être supérieure à
 
 # rucher/rucherPoidsForm.hml
 PoidsVide=Poids vide
+Precedent=Précédent
 
 # rucher/ruchersDist.html
 DistanceV=Distance voiture
