--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -546,6 +546,7 @@ doitEtreSupA=Must be greater than
 
 # rucher/rucherPoidsForm.hml
 PoidsVide=Empty weight
+Precedent=Previous
 
 # rucher/ruchersDist.html
 DistanceV=Distance car
