EssaimsPoids courbe des mesures du poids d'une ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -273,6 +273,7 @@ retourrucheaudepot=Retour de la ruche au dépôt
 rucheAjouteeAuRucher=Ruche {0} ajoutée le {1} au rucher {2}
 
 # essaim/essaimDetail.html
+courbePoids=Courbe des poids
 dateEssaim=Date essaim
 dateRuche=Date ruche
 dateTraitement=Date traitement
