--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -273,6 +273,7 @@ retourrucheaudepot=Hive back to depot
 rucheAjouteeAuRucher=Hive {0} added on {1} to the apiary {2}
 
 # essaim/essaimDetail.html
+courbePoids=Weight curve
 dateEssaim=Swarm date
 dateRuche=Hive date
 dateTraitement=Treatment date
