Personne affichage/saisie tel. Selemenum 4.13.0

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -412,6 +412,7 @@ personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est
 supprimercettepersonne=Supprimer cette personne ?
 Pasderucher=Pas de rucher avec cette personne pour contact
 contactRuchers=Contact pour les Ruchers
+tel=Téléphone
 
 #################### recolte ########################################
 
