--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -406,6 +406,7 @@ Personnes=People
 emailexiste=This email is already used
 loginexiste=This login is already used
 personne=People
+tel=Phone
 
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
