essaimsPoids.html ajout titre et retour vers détail essaim

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -190,6 +190,9 @@ notifPersite=Persistance
 
 #################### essaim ########################################
 
+#essaimsPoids.html
+vide=vide
+
 # essaim/essaimEssaimerForm.html
 Essaimage=Essaimage
 NomNouvelEssaim=Nom du nouvel essaim
