--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -190,6 +190,9 @@ notifPersite=Persistence
 
 #################### essaim ########################################
 
+#essaimsPoids.html
+vide=empty
+
 # essaim/essaimEssaimerForm.html
 Essaimage=Swarming
 NomNouvelEssaim=Name of the new swarm
