rucherPoids.html poids des essaims

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -549,6 +549,9 @@ doitEtreSupA=Doit être supérieure à
 
 #################### rucher ########################################
 
+# rucherPoids.html
+poidsessaims=Poids des essaims
+
 # rucher/rucherPoidsForm.hml
 PoidsVide=Poids vide
 Precedent=Précédent
