--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -549,6 +549,9 @@ doitEtreSupA=Must be greater than
 
 #################### rucher ########################################
 
+# rucherPoids.html
+poidsessaims=Swarm weights
+
 # rucher/rucherPoidsForm.hml
 PoidsVide=Empty weight
 Precedent=Previous
