essaimForm.html saisie date dispersion, coordination avec actif

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -190,7 +190,10 @@ notifPersite=Persistance
 
 #################### essaim ########################################
 
-#essaimsPoids.html
+# essaimForm.html
+dateDispersion=Date de dispersion
+
+# essaimsPoids.html
 vide=vide
 
 # essaim/essaimEssaimerForm.html
