--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -190,7 +190,10 @@ notifPersite=Persistence
 
 #################### essaim ########################################
 
-#essaimsPoids.html
+# essaimForm.html
+dateDispersion=Dispersion date
+
+# essaimsPoids.html
 vide=empty
 
 # essaim/essaimEssaimerForm.html
