essaimForm essaim.java ajout commentaire dispersion, readonly -> hidden

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -192,6 +192,7 @@ notifPersite=Persistance
 
 # essaimForm.html
 dateDispersion=Date de dispersion
+commDisp=Commentaire dispersion
 
 # essaimsPoids.html
 vide=vide
