--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -192,6 +192,7 @@ notifPersite=Persistence
 
 # essaimForm.html
 dateDispersion=Dispersion date
+commDisp=Dispersion comment
 
 # essaimsPoids.html
 vide=empty
