dispersion dans entité essaim suite

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -110,6 +110,7 @@ EssInactSansDisperKO=Essains inactifs sans événement dispersion
 EssInactSansDisperOK=Pas d'essain inactif sans événement dispersion
 
 # infos.html
+essaim_s=essaim(s)
 hausses=hausses
 production=production
 elevage=élevage
