--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -110,6 +110,7 @@ EssInactSansDisperKO=Inactive swarms without dispersion event
 EssInactSansDisperOK=No inactive swarm without dispersion event
 
 # infos.html
+essaim_s=swarm(s)
 hausses=supers
 production=production
 elevage=breeding
