rucherPoids amélioration du traitement du cas aucune pesée

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -556,6 +556,7 @@ doitEtreSupA=Doit être supérieure à
 
 # rucherPoids.html
 poidsessaims=Poids des essaims
+aucunePesee=Aucune pesée
 
 # rucher/rucherPoidsForm.hml
 PoidsVide=Poids vide
