--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -556,6 +556,7 @@ doitEtreSupA=Must be greater than
 
 # rucherPoids.html
 poidsessaims=Swarm weights
+aucunePesee=No weighing
 
 # rucher/rucherPoidsForm.hml
 PoidsVide=Empty weight
