internationalisation. essaimsPoids amélioration si pas de pesée.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -615,6 +615,11 @@ Ajout=Ajout
 Retrait=Retrait
 
 # rucher/rucherDetailIgn.html
+calculEnCours=Calcul en cours...
+distDiminuee=La distance est diminuée de 
+pasDeGeoLoc=Désolé, pas de localisation possible.
+recherchePos=Recherche position en cours...
+locImpossible=La localisation n'est pas possible avec votre navigateur.
 parcours=Parcours
 parcoursoptimum=Parcours optimum des ruches
 ruches=ruches
