--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -615,6 +615,11 @@ Ajout=Addition
 Retrait=Withdrawal
 
 # rucher/rucherDetailIgn.html
+calculEnCours=Calculation in progress...
+distDiminuee=The distance is decreased by 
+pasDeGeoLoc=Sorry, no location possible.
+recherchePos=Position search in progress...
+locImpossible=Location is not possible with your browser.
 parcours=Route
 parcoursoptimum=Optimum route along the hives
 ruches=hives
