rucherDetailGg.js correction erreur js suite à suppression appels jquery

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -616,6 +616,7 @@ Retrait=Retrait
 
 # rucher/rucherDetailIgn.html
 calculEnCours=Calcul en cours...
+pasDAmelioration=Pas d'amélioration<br/>
 distDiminuee=La distance est diminuée de 
 pasDeGeoLoc=Désolé, pas de localisation possible.
 recherchePos=Recherche position en cours...
