--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -616,6 +616,7 @@ Retrait=Withdrawal
 
 # rucher/rucherDetailIgn.html
 calculEnCours=Calculation in progress...
+pasDAmelioration=No improvement<br/>
 distDiminuee=The distance is decreased by 
 pasDeGeoLoc=Sorry, no location possible.
 recherchePos=Position search in progress...
