personne tel:// séparateur si plusieurs numéros : /

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -414,6 +414,7 @@ Personnes=Personnes
 emailexiste=Cet email est déjà utilisé
 loginexiste=Ce login est déjà utilisé
 personne=Personne
+telSep=Téléphone (séparateur /)
 
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
