--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -414,13 +414,14 @@ Personnes=People
 emailexiste=This email is already used
 loginexiste=This login is already used
 personne=People
-tel=Phone
+telSep=Téléphone (séparateur /)
 
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 Pasderucher=No apiary has this person as contact
 contactRuchers=Contact for the Apiaries
+tel=Phone
 
 #################### recolte ########################################
 
