internationalisation age des reines

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -216,6 +216,10 @@ Production=Production
 # essaim/essaimsStatAges.html
 Moyenne=Moyenne
 EcartType= Écart type
+ageDesReines=Âge des reines
+nbReinesTotal=Nombre de reines Total
+jours=jours
+Reines=Reines
 #EnCouveuse=Pas née
 #horsRuche=Hors ruche
 
