--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -216,6 +216,10 @@ Production=Production
 # essaim/essaimsStatAges.html
 Moyenne=Mean
 EcartType= Standard deviation
+ageDesReines=Age of queens
+nbReinesTotal=Number of queens Total
+jours=days
+Reines=Queens
 #EnCouveuse=Not born
 #horsRuche=Outside the hive
 
@@ -459,7 +463,7 @@ poidsApres=Weight after harvest
 recolteHausseDepot=Remove all supers of the harvest from their hives
 supprimerrecolteethausses=Remove this harvest and all its supers?
 statistiquesessaims=Swarms statistics
-saisirpoids=Get weight
+saisirpoids=Enter the weights
 choixHausesRecolte=Select harvest supers
 typeMiel=Honey type
 poidsMielPot=Honey weight jarred
@@ -629,7 +633,7 @@ distancedeparcours=Route length
 Entree=Entrance
 pleinecran=Toggle full-screen
 couchemarqueursruches=Hive marker layer
-aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect<br/>Right clic on an annotation to display its description
+aiderucherdetailignmarkers=Doubleclick on a hive to show details<br/>Click to select, then click to move<br/>Click on map to deselect<br/>Right click on an annotation to display its description
 listeRuchesOrdonnees=Hives ordered list along the route
 listePlusRuchesOrdonnees=Hives ordered detailed list along the route
 markerFixes=Fixed markers
@@ -644,7 +648,7 @@ distRuchesOk=Hive distances are correct
 
 # rucher/ruhersListeIgn.html
 couchemarqueursruchers=Apiary marker layer
-aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
+aiderucherlisteignmarkers=Doubleclick on an apiary to show details<br/>Click to select, then click to move<br/>Click on map to deselect 
 recentrer?=Recenter all apiaries on their hives?
 recentrer=Recenter all apiaries on their hives
 PasDeRuche=No hive
