pom.xml minification javascript

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -638,6 +638,7 @@ listeRuchesOrdonnees=Liste des ruches ordonnée suivant le parcours
 listePlusRuchesOrdonnees=Liste détaillée des ruches ordonnée suivant le parcours
 markerFixes=Marqueurs fixes
 enregistreDessin=Enregistrer le dessin
+dessintxt=Dessin
 rapprocher=Rapprocher les ruches trop éloignées
 exportGPX=Export GPX
 exportKML=Export KML
