--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -418,7 +418,7 @@ Personnes=People
 emailexiste=This email is already used
 loginexiste=This login is already used
 personne=People
-telSep=Téléphone (séparateur /)
+telSep=Phone (separator /)
 
 # personne/personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
@@ -638,6 +638,7 @@ listeRuchesOrdonnees=Hives ordered list along the route
 listePlusRuchesOrdonnees=Hives ordered detailed list along the route
 markerFixes=Fixed markers
 enregistreDessin=Save drawing
+dessintxt=Drawing
 rapprocher=Bring closer hives that are too far
 exportGPX=GPX export
 exportKML=KML export
