internationalisation cartes ign, osm

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -646,6 +646,7 @@ parcoursRecalcul=Re-calculer le parcours des ruches
 cercles=Cercles
 dessinEnregistre = Dessin enregistré
 distRuchesOk=Distances ruches correctes
+ZoomRuches=Zoom Ruches
 
 # rucher/ruhersListeIgn.html
 couchemarqueursruchers=Couche des marqueurs Ruchers
