--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -646,6 +646,7 @@ parcoursRecalcul=Re-calculate hive route
 cercles=Circles
 dessinEnregistre = Drawing saved
 distRuchesOk=Hive distances are correct
+ZoomRuches=Zoom Hives
 
 # rucher/ruhersListeIgn.html
 couchemarqueursruchers=Apiary marker layer
