essaimDetail rucherDetail ajout sous titre nb récoltes

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -579,6 +579,7 @@ ProductionRecolte=Production par récolte
 ruchersProdRecolte=Ruchers statistiques de production
 
 # rucher/rucherDetail.html
+nbXRecoltes={0} récolte(s)
 temps=Temps
 Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
