--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -579,6 +579,7 @@ ProductionRecolte=Production per harvest
 ruchersProdRecolte=Apiaries production statistics
 
 # rucher/rucherDetail.html
+nbXRecoltes={0} harvest(s)
 temps=Time
 Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
