rucheDetail sous titre liste hausses -> nb hausses

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -501,7 +501,7 @@ cloner=Cloner
 changerDeRucher=Changer de rucher
 dateAcquisition=Acquisition
 nbCadresMax=Cadres max
-listeHausses=Liste des hausses
+nbXHausses={0} hausse(s)
 Ruches=Ruches
 ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
 Pasdehausse=Pas de hausse
