--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -501,7 +501,7 @@ cloner=Clone
 changerDeRucher=Move to another apiary
 dateAcquisition=Acquisition
 nbCadresMax=Frames max
-listeHausses=Supers list
+nbXHausses={0} supers(s)
 Ruches=Hives
 ajoutRetraitHausses=Add/Remove/Reorder supers
 Pasdehausse=No super
