recolteDetail "données brutes" -> "groupées par ruche"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -452,7 +452,7 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolte/recolteDetail.html
-Brut=Données brutes
+HaussesGroup=Groupées par ruche
 Retirerhausses=Retirer les hausses
 SaisiePoidsMiel=Saisie des poids de miel
 recolte=Récolte
@@ -468,7 +468,7 @@ choixHausesRecolte=Choix des hausses de la récolte
 typeMiel=Type de miel
 poidsMielPot=Poids de miel mis en pot
 poidsMielMoyen=Poids de miel moyen par ruche
-haussesRecolte=Hausses de la récolte
+XhaussesRec={0} hausses de la récolte
 
 # recolte/recoltesStat.html
 productionessaim=Production par essaim.
