--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -452,7 +452,7 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolte/recolteDetail.html
-Brut=Raw data
+HaussesGroup=Grouped by hive
 Retirerhausses=Remove the supers
 SaisiePoidsMiel=Honey weight entry
 recolte=Harvest
@@ -468,7 +468,8 @@ choixHausesRecolte=Select harvest supers
 typeMiel=Honey type
 poidsMielPot=Honey weight jarred
 poidsMielMoyen=Honey average weight per hive
-haussesRecolte=Harvest supers
+XhaussesRec={0} harvest supers
+
 
 # recolte/recoltesStat.html
 productionessaim=Production by swarm. 
