Pour supprimer un rucher il faut enlever au préalable ses ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -584,6 +584,7 @@ temps=Temps
 Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
+ruchernonsuppruches=Ce rucher ne peut être supprimé, il contient des ruches
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
 supprimercerucher?=Supprimer ce rucher ?
 historique=Historique
