--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -585,6 +585,7 @@ temps=Time
 Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
+ruchernonsuppruches=This apiary cannot be deleted, it contains hives
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
 historique=History
