suppression rucher : interdite si récolte, évé, dépot ou ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -585,7 +585,7 @@ Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
 ruchernonsuppruches=Ce rucher ne peut être supprimé, il contient des ruches
-supprimerruchereteven=Supprimer ce rucher et ses événements ?
+rucherEves=Ce rucher ne peut être supprimé, il est référencé par des événements
 supprimercerucher?=Supprimer ce rucher ?
 historique=Historique
 transhumances=Transhumances
