--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -586,7 +586,7 @@ Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
 ruchernonsuppruches=This apiary cannot be deleted, it contains hives
-supprimerruchereteven=Delete this apiary and all its events?
+rucherEves=This apiary cannot be deleted, it is used in events
 supprimercerucher?=Delete this apiary?
 historique=History
 transhumances=Transhumances
