Supprimer uniquement si pas d'événements.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -297,7 +297,7 @@ commentairePesee=Commentaire pesée
 dateCadre=Date cadre
 commentaireCadre=Commentaire cadre
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
-supprimeressaimevenements=Supprimer cet essaim et ses événements ?
+supprimeressaimevenements=Cette essaim ne peut être supprimé, il est référencé par des événements
 supprimeressaim=Supprimer cette essaim ?
 nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
 nomessaimsvirgule=Cloner\nNom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
@@ -391,7 +391,7 @@ hausse=Hausse
 
 # hausse/hausseDetail.html
 commentaireremplissage=Commentaire remplissage
-supprimerhausseevenement=Supprimer cette hausse et ses événements ?
+supprimerhausseevenement=Cette hausse ne peut être supprimée, elle est référencée par des événements ?
 nomhaussesvirgule=Cloner\nNom des hausses séparés par une virgule
 supprimerhausse=Supprimer cette hausse ?
 evenementRemplissage=Ajouter un événement Remplissage
@@ -493,7 +493,7 @@ PoidsTotal=Poids total
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
-supprimerrucheeteven?=Supprimer cette ruche et ses événements ?
+rnpeves=Cette ruche ne peut être supprimée, elle est référencée dans des événements
 supprimercetteruche?=Supprimer cette ruche ?
 nomexistentdeja=existe(nt) déjà
 creer=Créer
