--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -297,7 +297,7 @@ commentairePesee=Weighing date
 dateCadre=Frame date
 commentaireCadre=Frame comment
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
-supprimeressaimevenements=Delete this swarm and his events?
+supprimeressaimevenements=This swarm cannot be deleted, it is used in events
 supprimeressaim=Delete this swarm?
 nexistentPasOuPasVides=do not exist or are not empty
 nomessaimsvirgule=Clone\nSwarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
@@ -391,7 +391,7 @@ hausse=Super
 
 # hausse/hausseDetail.html
 commentaireremplissage=Filling comment
-supprimerhausseevenement=Delete this super and all its events?
+supprimerhausseevenement=This super cannot be deleted, it is used in events
 nomhaussesvirgule=Clone\nSuper names separated with a comma
 supprimerhausse=Delete this super?
 evenementRemplissage=Add a filling event
@@ -494,7 +494,7 @@ PoidsTotal=Total weight
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
-supprimerrucheeteven?=Delete this hive and its events?
+rnpeves=This hive cannot be deleted, it is used in events
 supprimercetteruche?=Delete this hive?
 nomexistentdeja=already exist(s)
 creer=Create
