datatables 1.13.7, amélorations présentation infos.html

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -119,7 +119,7 @@ rucheset=ruches et
 haussesactives=hausses actives	
 ruchesaudepot=ruches au dépôt
 nonposees=non posées
-ruchesavecessaim=ruches avec essaim, 
+ruchesavecessaim=ruches avec essaim 
 posees=posées 
 Distance=Distance
 valeursParAnnee=Valeurs par année
