--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -119,7 +119,7 @@ rucheset=hives and
 haussesactives=active supers	
 ruchesaudepot=hives at the depot
 nonposees=free
-ruchesavecessaim=hives with a swarm, 
+ruchesavecessaim=hives with a swarm 
 posees=on a hive 
 Distance=Distance
 valeursParAnnee=Values per year
