infos.html (s) et autres améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -110,16 +110,17 @@ EssInactSansDisperKO=Essains inactifs sans événement dispersion
 EssInactSansDisperOK=Pas d'essain inactif sans événement dispersion
 
 # infos.html
+rucheS=ruche(s)
 essaim_s=essaim(s)
-hausses=hausses
+hausseS=hausse(s)
 production=production
 elevage=élevage
-ruchersdepot=ruchers (avec le dépôt)
+ruchersdepot=rucher(s) (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
-ruchesaudepot=ruches au dépôt
+ruchesaudepot=ruche(s) au dépôt
 nonposees=non posées
-ruchesavecessaim=ruches avec essaim 
+ruchesavecessaim=ruche(s) avec essaim 
 posees=posées 
 Distance=Distance
 valeursParAnnee=Valeurs par année
