--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -110,16 +110,17 @@ EssInactSansDisperKO=Inactive swarms without dispersion event
 EssInactSansDisperOK=No inactive swarm without dispersion event
 
 # infos.html
+rucheS=hive(s)
 essaim_s=swarm(s)
-hausses=supers
+hausseS=super(s)
 production=production
 elevage=breeding
-ruchersdepot=apiaries (with depot)
+ruchersdepot=apiarie(s) (with depot)
 rucheset=hives and 
 haussesactives=active supers	
-ruchesaudepot=hives at the depot
+ruchesaudepot=hive(s) at the depot
 nonposees=free
-ruchesavecessaim=hives with a swarm 
+ruchesavecessaim=hive(s) with a swarm 
 posees=on a hive 
 Distance=Distance
 valeursParAnnee=Values per year
