infos.html "qui ne sont pas..." -> ", pas..."

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -132,7 +132,7 @@ nbEssaimsDisperses=Nb dispersed swarms
 nbTraitements=Nb treatments
 ruchesAvecEssaimDepot=hive(s) with swarm at the depot
 ruchesAvecHaussesDepot=hive(s) with supers at the depot
-ruchesSansEssaimPasDepot=hive(s) without swarm not at the depot
+ruchesSansEssaimPasDepot=hive(s) without swarm, not at the depot
 essaimsHorsRuche=swarm(s) outside the hive
 ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
 rayonkm=Radius (km)
