recolteDetail.html ajout controle js sur saisie tabluaire

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -46,6 +46,7 @@ LeNomXXExiste=Le nom {0} existe déjà
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
 haussesEnlevees=Hausse(s) {0} enlevée(s), ruche(s) {1}
 enleverHausses=Enlever hausse(s) {0} ruche(s) {1} ?
+pasDeHaussesTxt=Cette récolte n'a pas encore de hausse
 
 # hausse/HausseController.java
 clonehaussecreees=Hausse(s) {0} créée(s)
