--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -46,6 +46,7 @@ LeNomXXExiste=The name {0} already exists
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
 enleverHausses=Remove supers {0} from their hives {1} ?
+pasDeHaussesTxt=This harvest has no super yet
 
 # hausse/HausseController.java
 clonehaussecreees=Super(s) {0} created
