hausseDetail.html ajout "cette hausse n'est pas sur une ruche"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -392,6 +392,7 @@ ajouterHausse=Ajouter une hausse
 hausse=Hausse
 
 # hausse/hausseDetail.html
+haussePasRuche=Cette hausse n'est pas sur une ruche
 commentaireremplissage=Commentaire remplissage
 supprimerhausseevenement=Cette hausse ne peut être supprimée, elle est référencée par des événements ?
 nomhaussesvirgule=Cloner\nNom des hausses séparés par une virgule
