--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -392,6 +392,7 @@ ajouterHausse=Add a super
 hausse=Super
 
 # hausse/hausseDetail.html
+haussePasRuche=This super is not on a hive
 commentaireremplissage=Filling comment
 supprimerhausseevenement=This super cannot be deleted, it is used in events
 nomhaussesvirgule=Clone\nSuper names separated with a comma
