Recalcul des distances : appel à partir de la page distance d'un rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -562,7 +562,13 @@ doitEtreSupA=Doit être supérieure à
 
 #################### rucher ########################################
 
-# rucherPoids.html
+# rucher/rucherDists
+distances=Calcul des nouvelles distances
+distancesReset=Recalcul de toutes les distances
+distCalc=Calcul des nouvelles distances : attention cela peut prendre plusieurs minutes
+distCalcReset=Recalcul de toutes les distances : attention cela peut prendre plusieurs dizaines de minutes
+
+# rucher/rucherPoids.html
 poidsessaims=Poids des essaims
 aucunePesee=Aucune pesée
 
