--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -563,6 +563,12 @@ doitEtreSupA=Must be greater than
 
 #################### rucher ########################################
 
+# rucher/rucherDists
+distances=Calculation of new distances
+distancesReset=Recalculation of all distances
+distCalc=Calculation of new distances: be careful this can take several minutes
+distCalcReset=Recalculation of all distances: be careful this can take several ten minutes
+
 # rucherPoids.html
 poidsessaims=Swarm weights
 aucunePesee=No weighing
