recolteHausseForm titre "Hausse" -> "Huasse Récolte"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -453,6 +453,7 @@ selecthaussesajouter=Sélectionner les hausses à ajouter
 plus=Plus
 poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
 poidsVideKg=Poids vide {0}kg
+HausseRec=Hausse Récolte
 
 # recolte/recolteDetail.html
 HaussesGroup=Groupées par ruche
