--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -453,6 +453,7 @@ selecthaussesajouter=Select supers to add
 plus=More
 poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
 poidsVideKg=Empty weight {0}kg
+HausseRec=Harvest Super
 
 # recolte/recolteDetail.html
 HaussesGroup=Grouped by hive
